Fixed table alignment issue in current holdings view

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -125,3 +125,7 @@ hr {
 .table .align-center {
   text-align: center;
 }
+
+.table .align-right {
+  text-align: right;
+}
